add localization messages

--- a/iped-app/resources/localization/iped-desktop-messages_de_DE.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_de_DE.properties
@@ -107,6 +107,24 @@ CopyProperties.CSVDateFormat=dd/MM/yyyy HH:mm:ss z
 CopyProperties.CSVDelimiter=;
 CopyProperties.from=\ von
 DuplicatesTableModel.Duplicates=\ Duplikate
+ExportCase.Title=Export Case[TBT]
+ExportCase.ExportEvidence=Export Evidences[TBT]
+ExportCase.ExportFolder=Export Folder[TBT]
+ExportCase.Export=Export[TBT]
+ExportCase.Close=Close[TBT]
+ExportCase.Open=Open[TBT]
+ExportCase.EstimateSize=Estimate Size[TBT]
+ExportCase.OpenExportFolder=Open Export Folder[TBT]
+ExportCase.InvalidExportFolder=Invalid Export Folder![TBT]
+ExportCase.ExportDirectoryInside=Export directory cannot be inside case folder![TBT]
+ExportCase.ExportFolderEmpty=Export Folder is not empty![TBT]
+ExportCase.EstimatedSize=Estimated Size[TBT]
+ExportCase.EstimatingSize=Estimating total size[TBT]
+ExportCase.CaseExported=Case successfully exported to[TBT]
+ExportCase.ExportError=Export Error! Verify aplication logs[TBT]
+ExportCase.of=of[TBT]
+ExportCase.timeLeft=Time left[TBT]
+ExportCase.Copying=Copying[TBT]
 ExportFiles.Copying=Kopiere
 ExportFiles.of=\ von
 ExportFilesToZip.Copying=Kopiere
@@ -262,6 +280,7 @@ MenuClass.UncheckHighlightedAndSubItems=markierte Elemente und Unterelemente abw
 MenuClass.UncheckHighlightedAndParent=Uncheck highlighted and parent items [TBT]
 MenuClass.UncheckHighlightedAndReferences=Uncheck highlighted and reference items [TBT]
 MenuClass.UncheckHighlightedAndReferencedBy=Uncheck highlighted and "referenced by" items [TBT]
+MenuClass.ExportCase=Export Case [TBT]
 MenuListener.ChatNotFound=übergeordneten Chat nicht gefunden
 MenuListener.Cols=Spalten:
 MenuListener.ExportTree.Warn=Markiere 01 (einen) Baumknoten als Exportreferenz\!
