--- a/iped-app/resources/localization/iped-desktop-messages_es_AR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_es_AR.properties
@@ -107,6 +107,24 @@ CopyProperties.CSVDateFormat=dd/MM/yyyy HH:mm:ss z
 CopyProperties.CSVDelimiter=,
 CopyProperties.from=\ de
 DuplicatesTableModel.Duplicates=\ Duplicados
+ExportCase.Title=Export Case[TBT]
+ExportCase.ExportEvidence=Export Evidences[TBT]
+ExportCase.ExportFolder=Export Folder[TBT]
+ExportCase.Export=Export[TBT]
+ExportCase.Close=Close[TBT]
+ExportCase.Open=Open[TBT]
+ExportCase.EstimateSize=Estimate Size[TBT]
+ExportCase.OpenExportFolder=Open Export Folder[TBT]
+ExportCase.InvalidExportFolder=Invalid Export Folder![TBT]
+ExportCase.ExportDirectoryInside=Export directory cannot be inside case folder![TBT]
+ExportCase.ExportFolderEmpty=Export Folder is not empty![TBT]
+ExportCase.EstimatedSize=Estimated Size[TBT]
+ExportCase.EstimatingSize=Estimating total size[TBT]
+ExportCase.CaseExported=Case successfully exported to[TBT]
+ExportCase.ExportError=Export Error! Verify aplication logs[TBT]
+ExportCase.of=of[TBT]
+ExportCase.timeLeft=Time left[TBT]
+ExportCase.Copying=Copying[TBT]
 ExportFiles.Copying=Copiando
 ExportFiles.of=\ de
 ExportFilesToZip.Copying=Copiando
@@ -262,6 +280,7 @@ MenuClass.UncheckHighlightedAndSubItems=Desmarcar elementos y subelementos resal
 MenuClass.UncheckHighlightedAndParent=Uncheck highlighted and parent items [TBT]
 MenuClass.UncheckHighlightedAndReferences=Uncheck highlighted and reference items [TBT]
 MenuClass.UncheckHighlightedAndReferencedBy=Uncheck highlighted and "referenced by" items [TBT]
+MenuClass.ExportCase=Export Case [TBT]
 MenuListener.ChatNotFound=Chat principal no encontrado
 MenuListener.Cols=Columnas:
 MenuListener.ExportTree.Warn=¡Resalte 01 (un) nodo del árbol como referencia de exportación\!
