--- a/iped-app/resources/localization/iped-desktop-messages_fr_FR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_fr_FR.properties
@@ -107,6 +107,24 @@ CopyProperties.CSVDateFormat=dd/MM/yyyy HH:mm:ss z
 CopyProperties.CSVDelimiter=;
 CopyProperties.from=\ de 
 DuplicatesTableModel.Duplicates=\ Doublons
+ExportCase.Title=Export Case[TBT]
+ExportCase.ExportEvidence=Export Evidences[TBT]
+ExportCase.ExportFolder=Export Folder[TBT]
+ExportCase.Export=Export[TBT]
+ExportCase.Close=Close[TBT]
+ExportCase.Open=Open[TBT]
+ExportCase.EstimateSize=Estimate Size[TBT]
+ExportCase.OpenExportFolder=Open Export Folder[TBT]
+ExportCase.InvalidExportFolder=Invalid Export Folder![TBT]
+ExportCase.ExportDirectoryInside=Export directory cannot be inside case folder![TBT]
+ExportCase.ExportFolderEmpty=Export Folder is not empty![TBT]
+ExportCase.EstimatedSize=Estimated Size[TBT]
+ExportCase.EstimatingSize=Estimating total size[TBT]
+ExportCase.CaseExported=Case successfully exported to[TBT]
+ExportCase.ExportError=Export Error! Verify aplication logs[TBT]
+ExportCase.of=of[TBT]
+ExportCase.timeLeft=Time left[TBT]
+ExportCase.Copying=Copying[TBT]
 ExportFiles.Copying=Copier 
 ExportFiles.of=\ de 
 ExportFilesToZip.Copying=Copier 
@@ -262,6 +280,7 @@ MenuClass.UncheckHighlightedAndSubItems=Décocher les éléments et sous-éléme
 MenuClass.UncheckHighlightedAndParent=Uncheck highlighted and parent items [TBT]
 MenuClass.UncheckHighlightedAndReferences=Uncheck highlighted and reference items [TBT]
 MenuClass.UncheckHighlightedAndReferencedBy=Uncheck highlighted and "referenced by" items [TBT]
+MenuClass.ExportCase=Export Case [TBT]
 MenuListener.ChatNotFound=Origine du chat non trouvé
 MenuListener.Cols=Colonnes :
 MenuListener.ExportTree.Warn=Selectionner 01 (un) nœud de l''arborescence comme référence d''export \!
