--- a/iped-app/resources/localization/iped-desktop-messages_pt_BR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_pt_BR.properties
@@ -107,6 +107,24 @@ CopyProperties.CSVDateFormat=dd/MM/yyyy HH:mm:ss z
 CopyProperties.CSVDelimiter=;
 CopyProperties.from=\ de 
 DuplicatesTableModel.Duplicates=\ Duplicatas
+ExportCase.Title=Exportar Caso
+ExportCase.ExportEvidence=Exportar Evidências
+ExportCase.ExportFolder=Diretório de Exportação
+ExportCase.Export=Exportar
+ExportCase.Close=Fechar
+ExportCase.Open=Abrir
+ExportCase.EstimateSize=Estimar Tamanho
+ExportCase.OpenExportFolder=Abrir Diretório de Exportação
+ExportCase.InvalidExportFolder=Diretório de Exportação Inválido!
+ExportCase.ExportDirectoryInside=Diretório de Exportação não pode estar dentro do da pasta do caso!
+ExportCase.ExportFolderEmpty=Diretório de Exportação não está vazio!
+ExportCase.EstimatedSize=Tamanho estimado
+ExportCase.EstimatingSize=Estimando tamanho total
+ExportCase.CaseExported=Caso exportado com sucesso para
+ExportCase.ExportError=Erro na exportação! Verificar logs da aplicação
+ExportCase.of=de
+ExportCase.timeLeft=Tempo restante
+ExportCase.Copying=Copiando
 ExportFiles.Copying=Copiando 
 ExportFiles.of=\ de 
 ExportFilesToZip.Copying=Copiando 
@@ -262,6 +280,7 @@ MenuClass.UncheckHighlightedAndSubItems=Desmarcar itens destacados e subitens
 MenuClass.UncheckHighlightedAndParent=Desmarcar itens destacados e item pai
 MenuClass.UncheckHighlightedAndReferences=Desmarcar itens destacados e referências
 MenuClass.UncheckHighlightedAndReferencedBy=Desmarcar itens destacados e "referenciado por"
+MenuClass.ExportCase=Exportar Caso
 MenuListener.ChatNotFound=Chat pai não encontrado
 MenuListener.Cols=Colunas:
 MenuListener.ExportTree.Warn=Selecione 01 (um) nó na árvore de diretórios como base de exportação\!
