--- a/iped-app/resources/localization/iped-desktop-messages.properties
+++ b/iped-app/resources/localization/iped-desktop-messages.properties
@@ -107,6 +107,24 @@ CopyProperties.CSVDateFormat=MM/dd/yyyy HH:mm:ss z
 CopyProperties.CSVDelimiter=,
 CopyProperties.from=\ of 
 DuplicatesTableModel.Duplicates=\ Duplicates
+ExportCase.Title=Export Case
+ExportCase.ExportEvidence=Export Evidences
+ExportCase.ExportFolder=Export Folder
+ExportCase.Export=Export
+ExportCase.Close=Close
+ExportCase.Open=Open
+ExportCase.EstimateSize=Estimate Size
+ExportCase.OpenExportFolder=Open Export Folder
+ExportCase.InvalidExportFolder=Invalid Export Folder!
+ExportCase.ExportDirectoryInside=Export directory cannot be inside case folder!
+ExportCase.ExportFolderEmpty=Export Folder is not empty!
+ExportCase.EstimatedSize=Estimated Size
+ExportCase.EstimatingSize=Estimating total size
+ExportCase.CaseExported=Case successfully exported to
+ExportCase.ExportError=Export Error! Verify aplication logs
+ExportCase.of=of
+ExportCase.timeLeft=Time left
+ExportCase.Copying=Copying
 ExportFiles.Copying=Copying 
 ExportFiles.of=\ of 
 ExportFilesToZip.Copying=Copying 
@@ -262,6 +280,7 @@ MenuClass.UncheckHighlightedAndSubItems=Uncheck highlighted items and subitems
 MenuClass.UncheckHighlightedAndParent=Uncheck highlighted and parent items
 MenuClass.UncheckHighlightedAndReferences=Uncheck highlighted and reference items
 MenuClass.UncheckHighlightedAndReferencedBy=Uncheck highlighted and "referenced by" items
+MenuClass.ExportCase=Export Case
 MenuListener.ChatNotFound=Parent chat not found
 MenuListener.Cols=Columns:
 MenuListener.ExportTree.Warn=Highlight 01 (one) tree node as export reference\!
