--- a/iped-app/resources/localization/iped-desktop-messages.properties
+++ b/iped-app/resources/localization/iped-desktop-messages.properties
@@ -75,6 +75,8 @@ BookmarksManager.CommentsTooltip=Bookmark comments
 BookmarksManager.Update=Update
 BookmarksManager.UpdateTooltip=Update comments
 BookmarksManager.AlreadyExists=Bookmark name already exists!
+BookmarksManager.IncludeSubitems=Include Subitems
+BookmarksManager.IncludeParentItem=Include Parent Item
 BookmarksTreeModel.NoBookmarks=[No Bookmarks]
 BookmarksTreeModel.RootName=Bookmarks
 CategoryTreeModel.RootName=Categories
