--- a/iped-app/resources/localization/iped-desktop-messages_de_DE.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_de_DE.properties
@@ -75,6 +75,8 @@ BookmarksManager.CommentsTooltip=Kommentare zu Lesezeichen
 BookmarksManager.Update=Update
 BookmarksManager.UpdateTooltip=Kommentare zu Updates
 BookmarksManager.AlreadyExists=Lesezeichen ist bereits vorhanden!
+BookmarksManager.IncludeSubitems=Include Subitems[TBT]
+BookmarksManager.IncludeParentItem=Include Parent Item[TBT]
 BookmarksTreeModel.NoBookmarks=[Keine Lesezeichen]
 BookmarksTreeModel.RootName=Lesezeichen
 CategoryTreeModel.RootName=Kategorien
