--- a/iped-app/resources/localization/iped-desktop-messages_es_AR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_es_AR.properties
@@ -75,6 +75,8 @@ BookmarksManager.CommentsTooltip=Marcar comentarios
 BookmarksManager.Update=Actualizar
 BookmarksManager.UpdateTooltip=Actualizar comentarios
 BookmarksManager.AlreadyExists=¡El nombre del marcador ya existe!
+BookmarksManager.IncludeSubitems=Include Subitems[TBT]
+BookmarksManager.IncludeParentItem=Include Parent Item[TBT]
 BookmarksTreeModel.NoBookmarks=[Sin marcadores]
 BookmarksTreeModel.RootName=Marcadores
 CategoryTreeModel.RootName=Categorías
