--- a/iped-app/resources/localization/iped-desktop-messages_fr_FR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_fr_FR.properties
@@ -75,6 +75,8 @@ BookmarksManager.CommentsTooltip=Commentaires du favori
 BookmarksManager.Update=Mise à jour
 BookmarksManager.UpdateTooltip=Mettre à jour les commentaires
 BookmarksManager.AlreadyExists=Nom du favori existe déjà \!
+BookmarksManager.IncludeSubitems=Include Subitems[TBT]
+BookmarksManager.IncludeParentItem=Include Parent Item[TBT]
 BookmarksTreeModel.NoBookmarks=[Aucun favori]
 BookmarksTreeModel.RootName=Favoris
 CategoryTreeModel.RootName=Catégories
