--- a/iped-app/resources/localization/iped-desktop-messages_it_IT.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_it_IT.properties
@@ -75,6 +75,8 @@ BookmarksManager.CommentsTooltip=Commenti ai segnalibri
 BookmarksManager.Update=Aggiorna
 BookmarksManager.UpdateTooltip=Aggiorna commento
 BookmarksManager.AlreadyExists=Il nome del segnalibro esiste già!
+BookmarksManager.IncludeSubitems=Include Subitems[TBT]
+BookmarksManager.IncludeParentItem=Include Parent Item[TBT]
 BookmarksTreeModel.NoBookmarks=[Nessun segnalibro]
 BookmarksTreeModel.RootName=Segnalibri
 CategoryTreeModel.RootName=Categorie
