--- a/iped-app/resources/localization/iped-desktop-messages_pt_BR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_pt_BR.properties
@@ -75,6 +75,8 @@ BookmarksManager.CommentsTooltip=Comentários do marcador
 BookmarksManager.Update=Atualizar
 BookmarksManager.UpdateTooltip=Atualizar comentários
 BookmarksManager.AlreadyExists=Nome de marcador já existente!
+BookmarksManager.IncludeSubitems=Incluir Subitens
+BookmarksManager.IncludeParentItem=Incluir Itens de Origem
 BookmarksTreeModel.NoBookmarks=[Sem Marcadores]
 BookmarksTreeModel.RootName=Marcadores
 CategoryTreeModel.RootName=Categorias
