change report dialog SEF custom

--- a/iped-app/resources/localization/iped-desktop-messages_pt_BR.properties
+++ b/iped-app/resources/localization/iped-desktop-messages_pt_BR.properties
@@ -326,9 +326,9 @@ ReportDialog.ChooseLabel=Escolha os marcadores para inserir no relatório:
 ReportDialog.Create=Gerar
 ReportDialog.ErrorTitle=Erro
 ReportDialog.Evidences=Materiais
-ReportDialog.Examiner=Examinador
+ReportDialog.Examiner=Observações
 ReportDialog.FillInfo=Preencher
-ReportDialog.Investigation=Número da Investigação
+ReportDialog.Investigation=Hash
 ReportDialog.KeywordsFile=Arquivo de palavras-chave (opcional):
 ReportDialog.LoadButton=Abrir
 ReportDialog.LoadInfo=Carregar informações do caso de arquivo .json ou .asap:
@@ -338,11 +338,11 @@ ReportDialog.Output=Pasta do relatório:
 ReportDialog.OutputRequired=Necessário especificar pasta de saída\!
 ReportDialog.Record=Registro/Protocolo
 ReportDialog.RecordDate=Data do Registro
-ReportDialog.ReportDate=Data do Laudo
+ReportDialog.ReportDate=Nome do Caso
 ReportDialog.ReportError=Erro ao gerar Relatório, verifique o log\!
 ReportDialog.ReportFinished=Geração de Relatório finalizada\!
-ReportDialog.ReportNum=Número do Laudo
-ReportDialog.ReportTitle=Título do Laudo
+ReportDialog.ReportNum=Nome do Investigador
+ReportDialog.ReportTitle=Nome da Operação
 ReportDialog.Request=Número da Solicitação
 ReportDialog.RequestDate=Data da Solicitação
 ReportDialog.Requester=Requisitante
